# py-solr-url-gen

./: README.md  pyproject.toml
src/solr_url_gen/: __init__.py  solr_url_gen.py
