[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solr-url-gen"
version = "0.3.0"
description = "Url generator for solr"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  { name = "Bogatyrev Aleksandr", email = "bogatirevas.dev@gmail.com" },
]
maintainers = [
  { name = "Bogatyrev Aleksandr", email = "bogatirevas.dev@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/BogatiterAS/py-solr-url-gen#readme"
Issues = "https://github.com/BogatiterAS/py-solr-url-gen/issues"
Source = "https://github.com/BogatiterAS/py-solr-url-gen"

